# gore-and-ash-lambdacube

./: .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  gore-and-ash-lambdacube.cabal  gore-and-ash-lambdacube.sublime-project  mkdocs  publish  stack.yaml
examples/: Example01.hs
examples/01/: Example01.hs  Main.hs  example01.lc
examples/02/: Example02.hs  Main.hs  Matrix.hs  example02.lc
examples/03/: Example03.hs  Main.hs  Matrix.hs  example03.lc
examples/04/: Example04.hs  Main.hs  Matrix.hs  example04.lc
examples/05/: Example05.hs  Matrix.hs  example05.lc
examples/shared/: Builtins.lc  Core.hs  Internals.lc  Prelude.lc
src/Game/GoreAndAsh/: LambdaCube.hs
src/Game/GoreAndAsh/LambdaCube/: API.hs  Module.hs  State.hs
