name:                gore-and-ash-lambdacube
version:             0.1.0.0
synopsis:            Core module for Gore&Ash engine that do something.
description:         Please see README.md
homepage:            https://github.com/TeaspotStudio/gore-and-ash-lambdacube#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:     
                      Game.GoreAndAsh.LambdaCube
                      Game.GoreAndAsh.LambdaCube.API
                      Game.GoreAndAsh.LambdaCube.Module
                      Game.GoreAndAsh.LambdaCube.State
  
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , containers >= 0.5.6.2
                    , deepseq >= 1.4.1.1
                    , exceptions >= 0.8.2.1
                    , gore-and-ash >= 1.1.0.1
                    , hashable >= 1.2.4.0
                    , lambdacube-compiler >= 0.4.0.0
                    , lambdacube-gl >= 0.4.0.2
                    , mtl >= 2.2.1
                    , text >= 1.2.2.0
                    , unordered-containers >= 0.2.5.1

  default-extensions: 
                      BangPatterns
                      DeriveGeneric
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      RecordWildCards
                      TypeFamilies
                      UndecidableInstances

executable gore-and-ash-lambdacube-example01
  hs-source-dirs:     examples/01, examples/shared
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Core 
                      FPS
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , deepseq >= 1.4.1.1
                     , exceptions >= 0.8.2.1
                     , gore-and-ash >= 1.1.0.1
                     , gore-and-ash-lambdacube
                     , gore-and-ash-sdl >= 1.1.0.1
                     , JuicyPixels >= 3.2.7
                     , lambdacube-compiler >= 0.4.0.0
                     , lambdacube-gl >= 0.4.0.2
                     , mtl >= 2.2.1
                     , text >= 1.2.2.0
                     , transformers >= 0.4.2.0
                     , vector >= 0.11.0.0

  default-extensions: 
                      Arrows
                      BangPatterns
                      DataKinds
                      DeriveGeneric
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      OverloadedStrings
                      RecordWildCards
                      TypeFamilies
                      UndecidableInstances

  ghc-options: -threaded