name:                gore-and-ash-lambdacube
version:             0.3.0.0
synopsis:            Core module of engine Gore&Ash that adds support for LambdaCube
description:         Please see README.md
homepage:            https://github.com/teaspot-studio/gore-and-ash-lambdacube#readme
license:             BSD3
license-file:        LICENSE
author:              ncrashed
maintainer:          ncrashed@gmail.com
copyright:           Anton
category:            Game
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml
cabal-version:       >=1.10

flag examples
  description: Enable building of examples
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.LambdaCube
    Game.GoreAndAsh.LambdaCube.API
    Game.GoreAndAsh.LambdaCube.Module
  build-depends:
      base                >= 4.7      && < 5
    , bytestring          >= 0.10     && < 0.11
    , containers          >= 0.5      && < 0.6
    , exceptions          >= 0.8      && < 0.9
    , gore-and-ash        >= 2.0.0.0  && < 2.1
    , monad-control       >= 1.0      && < 1.1
    , mtl                 >= 2.2      && < 2.3
    , text                >= 1.2.1    && < 1.3
    , transformers        >= 0.4.2    && < 0.6
    , transformers-base   >= 0.4.4    && < 0.5
    , lambdacube-compiler >= 0.6      && < 0.7
    , lambdacube-gl       >= 0.5      && < 0.6

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/ncrashed/gore-and-ash-lambdacube

executable gore-and-ash-lambdacube-example01
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples/01, examples/shared
  main-is:            Example01.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-lambdacube
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl      >= 3.0      && < 3.1
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lens                  >= 4.14     && < 4.16
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-lambdacube-example02
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples/02, examples/shared
  main-is:            Example02.hs
  other-modules:      Matrix
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-lambdacube
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl      >= 3.0      && < 3.1
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lambdacube-ir         >= 0.3      && < 0.4
    , lens                  >= 4.14     && < 4.16
    , linear                >= 1.20     && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-lambdacube-example03
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples/03, examples/shared
  main-is:            Example03.hs
  other-modules:      Matrix
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-lambdacube
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl      >= 3.0      && < 3.1
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lambdacube-ir         >= 0.3      && < 0.4
    , lens                  >= 4.14     && < 4.16
    , linear                >= 1.20     && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-lambdacube-example04
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples/04, examples/shared
  main-is:            Example04.hs
  other-modules:      Matrix
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-lambdacube
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl      >= 3.0      && < 3.1
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lambdacube-ir         >= 0.3      && < 0.4
    , lens                  >= 4.14     && < 4.16
    , linear                >= 1.20     && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-lambdacube-example05
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples/05, examples/shared
  main-is:            Example05.hs
  other-modules:      Matrix
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-lambdacube
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl      >= 3.0      && < 3.1
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lambdacube-ir         >= 0.3      && < 0.4
    , lens                  >= 4.14     && < 4.16
    , linear                >= 1.20     && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedLists
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

